# hermes-trictrac

./: .dockerignore  .gitignore  Dockerfile.fly  README.md  Readme.md  backgammon.nginx  backgammon.service  deploy.sh  fly.toml  hermes-trictrac.nginx  hermes-trictrac.service  justfile  makeEpub.sh  mix.exs  package-lock.json  start.sh
.github/workflows/: codeql-analysis.yml
BackgammonAI-main/: README.md  main.exs
android/: README.md
assets/: package-lock.json  package.json  webpack.config.js
assets/css/: app.css
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
gamedocs/: mybook.md  sbaraglino.md
haskell/hermes-desktop/: README.md  hermes-desktop.cabal  stack.yaml
haskell/hermes-desktop/app/: Main.hs
haskell/hermes-desktop/src/Hermes/Desktop/: Catalog.hs  Config.hs  Paths.hs
haskell/hermes-desktop/src/Hermes/Desktop/Protocol/: PhoenixFrame.hs  PhoenixSocketUrl.hs  Snapshot.hs
haskell/hermes-desktop/src/Hermes/Desktop/Runtime/: Local.hs
haskell/hermes-desktop/src/Hermes/Desktop/UI/: Shell.hs
hermes-bluesky/: .gitignore  README.md  UPSTREAMS.md  mix.exs
lib/: backgammon_web.ex  hermes_trictrac.ex  hermes_trictrac_web.ex
rel/: config.exs
src/: appendix.md  avertissement.md  chapitre10.md  chapitre13.md  chapitre2.md  chapitre4.md  chapitre5.md  chapitre8.md  chapitre9.md  deuxiemePartie.md  index.md  introduction.md  le-trictrac-compare.md  metadata.yaml  premierePartie.md  presentation.md  quatriemePartie.md  traite-du-jeu-de-backgammon.md  troisiemePartie.md
trictrac_zero/: Manifest.toml  Project.toml  README.md
(+1072 files in other folders)
