cabal-version:      2.4
name:               hermes-desktop
version:            0.1.0.0
build-type:         Simple

executable hermes-desktop
  main-is:          Main.hs
  hs-source-dirs:   app, src
  default-language: Haskell2010
  build-depends:
      base >=4.14 && <5
    , aeson
    , bytestring
    , containers
    , directory
    , filepath
    , gloss
    , gloss-juicy
    , network
    , network-uri
    , process
    , text
    , vector
